fix: fix critical error - when no coversation response to server sends eternaty

--- a/final-task/src/app/main/components/people-list/people-list.component.scss
+++ b/final-task/src/app/main/components/people-list/people-list.component.scss
@@ -37,6 +37,6 @@
 }
 
 .highlighted {
-  background-color: #fff2;
+  background-color: #999;
   border-radius: 4px;
 }
